--- a/src/app/components/chat/user-list/user-list.component.scss
+++ b/src/app/components/chat/user-list/user-list.component.scss
@@ -52,15 +52,15 @@
   top: 10%;
   left: 2%;
 }
-.badge {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: red;
-  border-radius: 50%;
-  top: 22%;
-  left: 14%;
-}
+// .badge {
+//   position: absolute;
+//   width: 20px;
+//   height: 20px;
+//   background-color: red;
+//   border-radius: 50%;
+//   top: 22%;
+//   left: 14%;
+// }
 .empty .exemple-empty{
   background-color: transparent;
 }
